<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="whatsNew" type="id" />
    <item name="dismissWhatsNewButton" type="id" />
    <item name="whatsNewMessage" type="id" />
    <item name="whatsNewMoreButton" type="id" />
    <item name="addItemEditText" type="id" />
    <item name="addItemButton" type="id" />
</resources>