...

        android:layout_toEndOf="@+id/image_layout"
        android:layout_toStartOf="@+id/profile_image"
        android:orientation="vertical">

        <TextView
            android:id="@+id/list_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
...
